# scour-secrets

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  deny.toml
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
apps/ansible/: profile.yaml  secrets.yaml
apps/aws-cli/: secrets.yaml
apps/bruno/: secrets.yaml
apps/circleci/: secrets.yaml
apps/dataiku/: profile.yaml  secrets.yaml
apps/django/: profile.yaml  secrets.yaml
apps/docker-compose/: profile.yaml  secrets.yaml
apps/elasticsearch/: profile.yaml  secrets.yaml
apps/fstab/: profile.yaml  secrets.yaml
apps/github-actions/: secrets.yaml
apps/gitlab/: profile.yaml  secrets.yaml
apps/grafana/: profile.yaml  secrets.yaml
apps/har/: secrets.yaml
apps/heroku/: profile.yaml  secrets.yaml
apps/insomnia/: secrets.yaml
apps/kubernetes/: profile.yaml  secrets.yaml
apps/laravel/: profile.yaml  secrets.yaml
apps/mongodb/: profile.yaml  secrets.yaml
apps/mysql/: profile.yaml  secrets.yaml
apps/nginx/: profile.yaml  secrets.yaml
apps/postgresql/: secrets.yaml
apps/postman/: secrets.yaml
apps/rails/: profile.yaml  secrets.yaml
apps/redis/: profile.yaml  secrets.yaml
apps/splunk/: secrets.yaml
apps/spring-boot/: profile.yaml  secrets.yaml
apps/terraform/: profile.yaml  secrets.yaml
benches/: mapping_bench.rs  streaming_bench.rs
docs/: api-reference.md  cli-reference.md  defensive-limits.md  llm.md  log-context.md  mcp.md  strategies.md  strip-values.md  structured-processing.md
docs/demos/: README.md  lib.sh  render.sh
docs/demos/drivers/: 01-quickstart.sh  02-dryrun-ci.sh  03-app-bundles.sh  04-pipe-structured.sh
docs/demos/tapes/: 01-quickstart.tape  02-dryrun-ci.tape  03-app-bundles.tape  04-pipe-structured.tape
examples/: basic.rs  custom_strategy.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_archive.rs  fuzz_csv.rs  fuzz_ini.rs  fuzz_json.rs  fuzz_regex.rs  fuzz_toml.rs  fuzz_xml.rs  fuzz_yaml.rs
mcp/: deno.json  mcp_client.ts  probe.ts  test-direct.ts
mcp/src/: env.ts  index.ts  naming.ts
src/: allowlist.rs  atomic.rs  error.rs  generator.rs  lib.rs  llm.rs  log_context.rs  report.rs  scanner.rs  secrets.rs  store.rs  strategy.rs  strip_values.rs
src/processor/: archive.rs  command_output.rs  csv_proc.rs  env_proc.rs  ini_proc.rs  json_proc.rs  jsonl_proc.rs  key_value.rs  limits.rs  log_line.rs  mod.rs  profile.rs  registry.rs  toml_proc.rs  xml_proc.rs  yaml_proc.rs
tests/: allow_test_cli_tests.rs  app_bundle_tests.rs  apps_cli_tests.rs  archive_tests.rs  audit_fix_tests.rs  builtin_bundles_tests.rs  canary_leak_tests.rs  detection_quality_tests.rs  entropy_tests.rs  extract_context_tests.rs  field_name_signal_tests.rs  force_text_tests.rs  ignore_path_hidden_tests.rs  input_source_matrix_tests.rs  leak_matrix_tests.rs  llm_endpoint_tests.rs  llm_tests.rs  oss.md  output_routing_tests.rs  plaintext_secrets_tests.rs  processor_tests.rs  progress_cli_tests.rs  property_tests.rs  quick_flag_tests.rs  report_tests.rs  scanner_tests.rs  secrets_tests.rs  span_edit_cli_tests.rs  strip_values_cli_tests.rs  template_tests.rs  test_pattern_cli_tests.rs
