[package]
name = "sanitize-engine"
version = "0.10.0"
edition = "2021"
rust-version = "1.74"
description = "Deterministic one-way data sanitization engine"
license = "Apache-2.0"
repository = "https://github.com/kayelohbyte/rust-sanitize"
documentation = "https://docs.rs/sanitize-engine"
readme = "README.md"
categories = ["command-line-utilities", "text-processing"]
keywords = ["sanitization", "redaction", "privacy", "pii"]
exclude = ["tests/", "fuzz/", ".github/", "docs/", "target/"]
autobins = false

[features]
default = []
bench = []

[dependencies]
aho-corasick = "1"
dashmap = "6"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"
thiserror = "1"
compact_str = "0.7"
regex = "1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
toml = "0.8"
quick-xml = "0.31"
csv = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tar = "0.4.45"
flate2 = "1"
clap = { version = "4.5.60", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ctrlc = { version = "3", features = ["termination"] }
rpassword = "7"
rayon = "1"
glob = "0.3"
walkdir = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "mapping_bench"
harness = false

[[bench]]
name = "streaming_bench"
harness = false

[[bin]]
name = "sanitize"
path = "src/bin/sanitize/main.rs"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
