[package]
name = "rust-sanitize"
version = "0.14.1"
edition = "2021"
rust-version = "1.86"
description = "Deterministic one-way data sanitization engine"
license = "Apache-2.0"
repository = "https://github.com/kayelohbyte/rust-sanitize"
documentation = "https://docs.rs/rust-sanitize"
readme = "README.md"
categories = ["command-line-utilities", "text-processing"]
keywords = ["sanitization", "redaction", "privacy", "pii"]
exclude = ["tests/", "fuzz/", ".github/", "docs/", "target/"]
autobins = false

[lib]
name = "rust_sanitize"
path = "src/lib.rs"

[features]
# Full build (CLI binary + all processors). This is what `cargo install` and
# the release artifacts produce.
default = ["cli", "archive", "structured"]
# CLI binary deps. Implies all processors so the installed `sanitize` tool is
# fully featured. Library-only users can drop this via `default-features = false`.
cli = ["dep:clap", "dep:ureq", "dep:walkdir", "dep:ctrlc", "dep:rpassword", "archive", "structured"]
# Archive processing (zip / tar / tar.gz).
archive = ["dep:zip", "dep:tar", "dep:flate2"]
# CSV and XML structured processors. (JSON/YAML/TOML/INI/env/key-value/log are
# always built; JSON/YAML/TOML pull small byte-span parsers — jiter /
# saphyr-parser / toml_edit — for format-preserving in-place editing.)
structured = ["dep:csv", "dep:csv-core", "dep:quick-xml"]
bench = []

[dependencies]
aho-corasick = "1"
dashmap = "6"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"
thiserror = "1"
compact_str = "0.7"
regex = "1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml_ng = "0.10"
toml = "0.8"
# Span-preserving structured editing (format-preserving in-place value redaction).
toml_edit = "0.22"
# Byte-position JSON parsing for span-based JSON editing (no big-int/py features).
# Pinned to 0.13 (MSRV 1.83); 0.14+ require Rust 1.88, above this crate's MSRV.
jiter = { version = "0.13", default-features = false }
# Span-aware YAML event parser for format-preserving YAML value redaction.
saphyr-parser = "0.0.6"
# Structured processors (feature = "structured")
quick-xml = { version = "0.31", optional = true }
csv = { version = "1", optional = true }
# Low-level CSV state machine (byte-accurate field spans for in-place editing).
csv-core = { version = "0.1", optional = true }
# Archive processors (feature = "archive")
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
tar = { version = "0.4.45", optional = true }
flate2 = { version = "1", optional = true }
# CLI-only (feature = "cli")
clap = { version = "4.5.60", features = ["derive", "env"], optional = true }
ctrlc = { version = "3", features = ["termination"], optional = true }
rpassword = { version = "7", optional = true }
walkdir = { version = "2", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
# Core (always built)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rayon = "1"
glob = "0.3"
bytecount = "0.6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "mapping_bench"
harness = false

[[bench]]
name = "streaming_bench"
harness = false

[[bin]]
name = "sanitize"
path = "src/bin/sanitize/main.rs"
required-features = ["cli"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
