[package]
name = "rust-sanitize-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rust-sanitize = { path = "..", package = "rust-sanitize" }

[[bin]]
name = "fuzz_regex"
path = "fuzz_targets/fuzz_regex.rs"
doc = false

[[bin]]
name = "fuzz_json"
path = "fuzz_targets/fuzz_json.rs"
doc = false

[[bin]]
name = "fuzz_yaml"
path = "fuzz_targets/fuzz_yaml.rs"
doc = false

[[bin]]
name = "fuzz_archive"
path = "fuzz_targets/fuzz_archive.rs"
doc = false

[[bin]]
name = "fuzz_xml"
path = "fuzz_targets/fuzz_xml.rs"
doc = false

[[bin]]
name = "fuzz_ini"
path = "fuzz_targets/fuzz_ini.rs"
doc = false
